@@ -54,9 +54,9 @@ class InstlClientRemove(InstlClient):
             for IID in items_in_folder:
                 name_and_version = self.iid_to_name_and_version[IID].name_and_version
                 self.batch_accum += self.platform_helper.progress("Remove {name_and_version}...".format(**locals()))
-                adjusted_sources_for_iid = self.items_table.get_adjusted_sources_for_iid(IID)
-                adjusted_resolved_sources_for_iid = [(var_stack.ResolveStrToStr(s[0]), s[1]) for s in adjusted_sources_for_iid]
-                for source in adjusted_resolved_sources_for_iid:
+                sources_for_iid = self.items_table.get_sources_for_iid(IID)
+                resolved_sources_for_iid = [(var_stack.ResolveStrToStr(s[0]), s[1]) for s in sources_for_iid]
+                for source in resolved_sources_for_iid:
                     self.batch_accum += self.platform_helper.progress("Remove {source[0]}...".format(**locals()))
                     self.batch_accum += var_stack.ResolveVarToList("iid_action_list_pre_remove_item", default=[])
                     self.create_remove_instructions_for_source(IID, folder_name, source)
